# offset-explorer-rs

./: .gitignore  PROGRESS.md  README.md  index.html  package-lock.json  package.json
e2e-tests/: e2e.spec.ts  playwright.config.ts
src/: AclPanel.svelte  App.svelte  ConsumerPanel.svelte  MessagePanel.svelte  ServerTree.svelte  ServerTree.svelte.bak  TopicPanel.svelte  ZkBrowser.svelte  app.css  main.ts
src-tauri/: Cargo.toml  PROGRESS.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: acls.rs  async_ops.rs  decoders.rs  kafka.rs  main.rs  models.rs  schema_registry.rs  tauri_commands.rs  ui_events.rs  zk_browser.rs  zookeeper.rs
src-tauri/src/config/: crypto.rs  crypto_working.rs  environment.rs  environment.rs.bak  environment_complete.rs  mod.rs  server_connection.rs  server_connection_clean.rs  server_connection_complete.rs  server_group.rs  settings.rs  settings_complete.rs
src-tauri/src/decoders/: avro_decoder.rs  base64_decoder.rs  byte_array_decoder.rs  json_decoder.rs  no_key_decoder.rs  numeric_decoders.rs  string_decoder.rs
src-tauri/src/kafka/: client.rs  mapper.rs
src-tauri/src/models/: broker.rs  consumer.rs  partition.rs  topic.rs
src-tauri/src/schema_registry/: client.rs
src-tauri/src/zookeeper/: client.rs
src-tauri/src/zookeeper/browser/: mod.rs  zk_browser.rs
src/lib/: api.ts  exportImport.ts  favorites.ts  history.ts  types.ts
tests/: e2e.spec.ts
