[package]
build = "build.rs"
name = "offset-explorer-rust"
version = "3.0.3"
description = "Offset Explorer 3 - Kafka cluster management GUI (Core Modules)"
authors = ["Offset Explorer Rust Team"]
license = "Proprietary"
repository = ""
edition = "2021"

[[bin]]
name = "offset-explorer-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
dirs = "5.0"
quick-xml = "0.31"
sha1 = "0.10"
rand = "0.8"
hex = "0.4"
flate2 = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
encoding_rs = "0.8"
base64 = "0.21"
byteorder = "1.5"

# Optional dependencies - uncomment when system libraries are available
# Note: SASL and SSL features require system libraries (libsasl2-dev, libssl-dev)
# For minimal build, use rdkafka without features
rdkafka = { version = "0.36", default-features = false, features = [] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
apache-avro = "0.16"
# zookeeper-client = "0.5"  # Commented out - requires C library
# Tauri GUI framework - enabled (GTK dev libraries installed)
tauri = { version = "2.0", features = ["devtools"] }
tauri-build = { version = "2.0" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
